syntax = "proto3";

message _ChainedContractAddress {
  // Token contract address
  string contract_address             = 1;
  // Token's chain
  string chain                        = 2;
}
